--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon src/server.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   },
