--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "nodemon src/server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
