--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cjs": "0.0.11",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
+    "node-magento2": "^1.1.4",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
